--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generate-comp",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "description": "",
   "main": "./lib/index.js",
   "bin": "./lib/index.js",
@@ -23,6 +23,11 @@
     "chalk": "^4.1.2",
     "commander": "^9.4.0",
     "fs-extra": "^10.1.0",
+    "git-clone-repo": "^1.0.0",
+    "git-pull-or-clone": "^2.0.2",
     "typescript": "^4.8.3"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^9.0.13"
   }
 }
